name:                Pinger
version:             0.1.0.0
synopsis:            Tracks TagTime pings.
license:             MIT
license-file:        LICENSE
author:              Nate Soares
maintainer:          nate@so8r.es
category:            Self improvement
build-type:          Simple
cabal-version:       >=1.10

executable pinger
  main-is:             Main.hs
  build-depends:
    HSH >= 1.2,
    async >= 2.0,
    containers >= 0.5,
    directory >= 1.0,
    filepath >= 1.3,
    old-locale >=1.0,
    optparse-applicative >=0.11,
    parallel >= 3.2,
    text >= 1.1,
    time >=1.4,
    transformers >= 0.4,
    base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
